crates/icydb-core/tests/ui/visitor/validate_module_private.rs
use icydb_core::visitor::validate::ValidateVisitor;

fn main() {}
